<resources>
    <string name="app_name">Mentor Application</string>
    <string name="welcome_to_viva_mentor">Welcome to Viva Mentor</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_page">Log In Page</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="code">Code</string>
    <string name="log_in_pg">LOG IN</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="name_signup_pg">Name</string>
    <string name="e_mail_signup_pg">E-Mail</string>
    <string name="password_signup_pg">Password</string>
    <string name="code_signup_pg">Code</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="sign_up_signup_pg">SIGN UP</string>
    <string name="role">Role</string>
    <string name="mentor_head">Mentor Head</string>
    <string name="mentor">Mentor</string>
    <string name="mentee">Mentee</string>
    <string name="mentor_head_home_page">Mentor head home page</string>
    <string name="student">Student</string>
    <string name="mentors">Mentors</string>
    <string name="mentor_home_page">Mentor Home Page</string>
    <string name="create_profile">Create Profile</string>
    <string name="see_profile">See Profile</string>
    <string name="student_home_page">Student Home page</string>
    <string name="create_profile_student_home_pg">Create Profile</string>
    <string name="see_profile_student_home_pg">See Profile</string>
    <string name="search_profile">Search Profile</string>
    <string name="password_profile_search_pg">Password</string>
    <string name="name_profile_search_pg">Name</string>
    <string name="search">Search</string>
    <string name="create_profile_student_profile_pg">Create Profile</string>
    <string name="name_student_profile_pg">Name</string>
    <string name="code_student_profile_pg">Code</string>
    <string name="password_student_profile_pg">Password</string>
    <string name="date_of_birth_student_profile_pg">Date of birth</string>
    <string name="roll_no">Roll No</string>
    <string name="address_student_profile_pg">Address</string>
    <string name="mentor_code">Mentor Code</string>
    <string name="year">Year</string>
    <string name="create">Create</string>
    <string name="mentor_profile_page">Mentor Profile page</string>
    <string name="name_mentor_profile_pg">Name</string>
    <string name="code_mentor_profile_pg">Code</string>
    <string name="password_mentor_profile_pg">Password</string>
    <string name="date_of_joining_mentor_profile_pg">Date of Joining</string>
    <string name="department_no">Department No</string>
    <string name="address_mentor_profile_pg">Address</string>
    <string name="mentor_code_mentor_profile_page">Mentor code</string>
    <string name="subject">Subject</string>
    <string name="create_mentor_profile_pg">Create</string>
    <string name="student_update_page">Student Update Page</string>
    <string name="old_data">Old Data</string>
    <string name="new_data">New Data</string>
    <string name="upadte">Upadte</string>
    <string name="mentor_update_page">Mentor Update Page</string>
    <string name="old_data_mentor_update_pg">Old Data</string>
    <string name="new_data_mentor_update_pg">New Data</string>
    <string name="update_mentor_update_pg">Update</string>
    <string name="student_profile_page">Student Profile Page</string>
    <string name="name_stu_profile_pg">Name</string>
    <string name="code_stu_profile_pg">Code</string>
    <string name="date_of_birth_stu_profile_pg">Date of Birth</string>
    <string name="roll_no_stu_profile_pg">Roll no</string>
    <string name="address_stu_profile_pg">Address</string>
    <string name="mentor_code_stu_profile_pg">Mentor code</string>
    <string name="year_stu_profile_pg">Year</string>
    <string name="want_to_update">Want to update</string>
    <string name="mentor_profile_page_mentor_profile">Mentor profile Page</string>
    <string name="name_mentor_profile">Name</string>
    <string name="code_mentor_profile">Code</string>
    <string name="date_of_joining_mentor_profile">Date of Joining</string>
    <string name="department_no_mentor_profile">Department no</string>
    <string name="address_mentor_profile">Address</string>
    <string name="mentor_code_mentor_profile">Mentor code</string>
    <string name="subject_mentor_profile">Subject</string>
    <string name="want_to_update_mentor_profile">Want to update</string>
    <string name="put_notification">Put Notification</string>
    <string name="notification">Notification</string>
    <string name="new_notification">New Notification</string>
    <string name="go_back">Go Back</string>
    <string name="notification_stu_hm_pg">notification</string>
</resources>