<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateProfilePage">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mentor_profile_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.099" />

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:ems="10"
            android:hint="@string/name_mentor_profile_pg"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/editTextTextPersonName10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/code_mentor_profile_pg"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />

        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:ems="10"
            android:hint="@string/password_mentor_profile_pg"
            android:inputType="textPassword"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName9"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:ems="10"
            android:hint="@string/date_of_joining_mentor_profile_pg"
            android:inputType="date"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName10"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:ems="10"
            android:hint="@string/department_no"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextDate"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextDate"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:ems="10"
            android:hint="@string/address_mentor_profile_pg"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/editTextNumber"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <EditText
            android:id="@+id/editTextTextPersonName12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:hint="@string/mentor_code_mentor_profile_page"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName11"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11" />

        <EditText
            android:id="@+id/editTextTextPersonName13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/subject"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName12"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12" />

        <Button
            android:id="@+id/ment_creatbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/create_mentor_profile_pg"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName13"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName13" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>
