<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RolePage">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/ment_hd_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/mentor_head"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/ment_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/mentor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ment_hd_role"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="@+id/ment_hd_role"
        app:layout_constraintTop_toBottomOf="@+id/ment_hd_role" />

    <Button
        android:id="@+id/mentee_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/mentee"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ment_role"
        app:layout_constraintStart_toStartOf="@+id/ment_role"
        app:layout_constraintTop_toBottomOf="@+id/ment_role" />

</androidx.constraintlayout.widget.ConstraintLayout>